# caset

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  add-license.py  conftest.py  create-dsym.sh  dev-requirements.txt  plot.py  plot3D.py  plot4D.py  pyproject.toml  setup.py
.github/workflows/: pages.yml  static.yml
caset/src/: Edge.cpp  Edge.h  bindings.cpp
docs/: Doxyfile  Makefile  requirements-docs.txt  requirements.txt
docs/_build/html/: .buildinfo  cpp_api.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  theory.html  usage.html
docs/_build/html/.doctrees/: cpp_api.doctree  environment.pickle  getting_started.doctree  index.doctree  theory.doctree  usage.doctree
docs/_build/html/_sources/: cpp_api.md.txt  index.md.txt  theory.md.txt
docs/_doxygen/xml/: Doxyfile.xml  Edge_8cpp.xml  Edge_8h.xml  Simplex_8cpp.xml  Simplex_8h.xml  Vertex_8cpp.xml  Vertex_8h.xml  bindings_8cpp.xml  classEdge.xml  classVertex.xml  classcaset_1_1Edge.xml  classcaset_1_1Vertex.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  namespacecaset.xml
docs/source/: caset.graphml  conf.py  cpp_api.md  getting_started.md  index.md  theory.md  usage.md
docs/source/assets/: caset.graphml
examples/: benchmark.py  plot4D.py
include/: Coface.h  Edge.h  EdgeList.h  Face.h  Fingerprint.h  Logger.h  Metric.h  Signature.h  Simplex.h  Spacetime.h  Vertex.h  VertexList.h  caset_config.hpp.in
include/constraints/: Constraint.h
include/observables/: Observable.h  SpacetimeVolume.h
include/simulations/: CDT.h  Simulation.h
include/spacetime/: Spacetime.h
include/spacetime/topologies/: Cylinder.h  Sphere.h  Topology.h  Toroid.h
include/spacetimes/: CDT.h  Sarah.h  Spacetime.h
include/spacetimes/topologies/: Cylinder.h  Sphere.h  Topology.h  Toroid.h
src/: Coface.cpp  EdgeList.cpp  Face.cpp  Logger.cpp  Metric.cpp  Signature.cpp  Simplex.cpp  Spacetime.cpp  Vertex.cpp  VertexList.cpp  bindings.cpp
src/observables/: Observable.cpp  SpacetimeVolume.cpp
src/spacetime/: Spacetime.cpp
src/spacetime/topologies/: Cylinder.cpp  Sphere.cpp  Topology.cpp  Toroid.cpp
src/spacetimes/: CDT.cpp  Sarah.cpp  Spacetime.cpp
src/spacetimes/topologies/: Cylinder.cpp  Sphere.cpp  Topology.cpp  Toroid.cpp
tests/: __init__.py  test_build.py  test_edge.py  test_edgelist.py  test_face.py  test_metric.py  test_simplex.py  test_spacetime.py  test_vertex.py
