[build-system]
requires = [
#    "cmake>=3.22",
#    "ninja",                # optional but faster on CI
    "pybind11>=2.12",
    "scikit-build-core>=0.9",
    "torch>=2.9",
]
build-backend = "scikit_build_core.build"

[project]
name = "caset"
version = "0.1.0"
description = "C++/pybind11 extension for lattice spacetime experiments"
authors = [{ name = "Andrew Kelleher", email = "keats.kelleher@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.scikit-build]
build-dir = "cmake-build/{wheel_tag}"
cmake.build-type = "Debug"

[tool.scikit-build.cmake.define]
CMAKE_CXX_FLAGS_DEBUG = "-O0 -g3 -gdwarf-5 -fstandalone-debug -fno-omit-frame-pointer"
CMAKE_INTERPROCEDURAL_OPTIMIZATION = "OFF"
Python_EXECUTABLE = "${python.executable}"
