[build-system]
requires = [
#    "cmake>=3.22",
    "ninja",                # optional but faster on CI
    "pybind11>=2.12",
    "scikit-build-core>=0.9",
    "torch>=2.9",
    "numpy>=2.3.5"
]
build-backend = "scikit_build_core.build"

[project]
name = "caset"
version = "0.1.0"
description = "C++/pybind11 extension for lattice spacetime experiments"
authors = [{ name = "Andrew Kelleher", email = "keats.kelleher@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pybind11-stubgen==2.5.5",
    "matplotlib==3.10.7",
    "numpy==2.3.4",
    "pybind11>=2.12",
    "torch>=2.9",
]
optional-dependencies.dev = [
    "numpy>=2.3.5",
    "pytest",
    "scikit-build-core>=0.9",
    "torch>=2.9",
    "accessible-pygments==0.0.5",
    "alabaster==1.0.0",
    "beautifulsoup4==4.14.2",
    "breathe==4.36.0",
    "cmake>=3.22",
    "furo==2025.9.25",
    "markdown-it-py==3.0.0",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "myst_parser==4.0.1",
    "ninja",
    "numpy==2.3.4",
    "pybind11>=2.12",
    "pybind11_stubgen==2.5.5",
    "pyyaml==6.0.3",
    "scikit-build-core>=0.9",
    "soupsieve==2.8",
    "sphinx-basic-ng==1.0.0b2",
    "sphinx==8.2.3",
    "torch>=2.9.0",
]

[tool.scikit-build]
build-dir = "cmake-build-debug/{wheel_tag}"
cmake.build-type = "Debug"

[tool.scikit-build.cmake.define]
CMAKE_CXX_FLAGS_DEBUG = "-O0 -g3 -gdwarf-5 -fstandalone-debug -fno-omit-frame-pointer"
CMAKE_INTERPROCEDURAL_OPTIMIZATION = "OFF"
Python_EXECUTABLE = "${python.executable}"
